# codexplusplus-mvp

./: .gitignore  CLONE-RUN-WINDOWS.ps1  DEV-HANDOFF-WINDOWS-MVP.md  FULL-PORTABLE-HANDOFF-WINDOWS.md  GITHUB-CLONE-HANDOFF-WINDOWS.md  PORTABLE-RUN-WINDOWS.ps1  README.md  RESTORE-CODEX-PROFILE-OPTIONAL.ps1  产品方案书.md  产品说明书.md
CodexPlusPlus-main/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
backend/: .dockerignore  .env.example  Dockerfile  gateway_request.go  gateway_runtime.go  gateway_store.go  gateway_stream.go  go.mod  go.sum  main.go  main_test.go
codex-plus-contracts/: README.md  change-review-policy.md  compatibility-matrix.md  coordinator-review.md  storage-decision.md
codex-plus-dev-plan/: ARCHITECTURE.md  BUSINESS-CONFIG-DECISION-TABLE.md  CODEX-AUTONOMOUS-TEST-RUNBOOK.md  COMPLIANCE-PRIVACY-LEGAL-CHECKLIST.md  CONTRACT-GATE.md  COST-CONTROL-AND-ABUSE-RUNBOOK.md  DEPLOYMENT-AUTOMATION-RUNBOOK.md  FILE-OWNERSHIP-MATRIX.md  FINAL-PLAN-COMPLETION-AUDIT.md  IMPLEMENTATION-STATUS.md  INTEGRATION-VERIFICATION-CHECKLIST.md  MODEL-QUALITY-POLICY.md  MULTI-SESSION-EXECUTION-TRACE.md  MVP-FINAL-PARALLEL-COMPLETION-PLAN.md  MVP-IMPLEMENTATION-PLAN.md  OBSERVABILITY-SLO-ALERTING-PLAN.md  PARALLEL-DISPATCH-PLAN.md  PHASE1-MODULE-C-BACKEND-FOUNDATION-PLAN.md  PHASE1-MODULE-D-CLIENT-API-PLAN.md  README.md  (+16 more)
desktop-client/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
desktop-client/src-tauri/icons/: icon.icns
desktop-client/src-tauri/src/: main.rs
desktop-client/src-tauri/src/platform/: macos.rs
(+485 files in other folders)
