[package]
name = "codexppp-desktop"
version = "0.1.39"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
toml_edit = "0.23"
sysinfo = "0.30"
