[package]
name = "codexppp-desktop"
version = "0.1.60"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
toml_edit = "0.23"
sysinfo = "0.30"
reqwest = "0.13"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell"] }
